--- a/popup.html
+++ b/popup.html
@@ -75,9 +75,19 @@
             border-radius: 4px;
             display: none;
         }
+        .instruction {
+            margin: 10px 0;
+            padding: 8px;
+            background-color: #fff3cd;
+            border-radius: 4px;
+            color: #856404;
+        }
     </style>
 </head>
 <body>
+    <div class="instruction">
+        使用说明：点击"开始收集数据"后，<strong>请手动滚动页面</strong>以加载更多帖子，插件会自动收集并显示排序结果。
+    </div>
     <div class="config-panel">
         <div class="config-item">
             <label>最大收集时间(分钟):</label>
