--- a/popup.html
+++ b/popup.html
@@ -86,7 +86,7 @@
 </head>
 <body>
     <div class="instruction">
-        使用说明：点击"开始收集数据"后，<strong>请手动滚动页面</strong>以加载更多帖子，插件会自动收集并显示排序结果。
+        使用说明：点击"开始收集数据"后，插件会<strong>自动滚动页面</strong>加载帖子，并收集排序展示收藏数据。
     </div>
     <div class="config-panel">
         <div class="config-item">
