更改glm大模型选择，更改右侧悬浮框宽度

--- a/popup.html
+++ b/popup.html
@@ -184,13 +184,12 @@
         <div class="setting-item" id="zhipu-model-container" style="display: none;">
             <label class="setting-label" for="zhipu-model">智谱模型：</label>
             <select id="zhipu-model">
-                <option value="glm-4">GLM-4</option>
                 <option value="glm-4-plus">GLM-4-Plus</option>
                 <option value="glm-4-air">GLM-4-Air</option>
                 <option value="glm-4-airx">GLM-4-AirX</option>
                 <option value="glm-4-long">GLM-4-Long</option>
                 <option value="glm-4-flashx">GLM-4-FlashX</option>
-                <option value="glm-4-flash">GLM-4-Flash</option>
+                <option value="glm-4-flash">GLM-4-Flash(免费)</option>
             </select>
         </div>
         
