--- a/popup.html
+++ b/popup.html
@@ -134,7 +134,7 @@
         <div class="feature">
             <div class="feature-title">树洞收藏统计</div>
             <p>在树洞首页，点击右侧的悬浮按钮，可以对当前页面的树洞进行收藏数和评论数的统计。
-                勾选自动滚动复选框，会使页面自动滚动并收集帖子。另外支持通过滚动时间、爬取数量和时间范围设置来限制爬取范围。</p>
+                勾选自动滚动复选框，会使页面自动滚动并收集帖子。另外支持通过滚动时间、爬取数量和时间范围设置来限制爬取范围。点击帖子后可以跳转到其所在位置。</p>
         </div>
 
         <div class="feature">
